<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".About">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/img_profile"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:src="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/name_profile"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/email_profile"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/phone_profile"/>


</LinearLayout>